--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,10 @@ toml = "0.9"
 # Testing
 criterion = "0.7"
 
+# Examples
+tempfile = "3.8"
+bincode = "1.3"
+
 [profile.release]
 lto = "fat"
 codegen-units = 1
