--- a/crates/dns-core/Cargo.toml
+++ b/crates/dns-core/Cargo.toml
@@ -13,6 +13,8 @@ thiserror.workspace = true
 bytes.workspace = true
 ahash.workspace = true
 tracing.workspace = true
+lockfree.workspace = true
+crossbeam.workspace = true
 
 [dependencies.serde]
 workspace = true
