--- a/crates/dns-core/Cargo.toml
+++ b/crates/dns-core/Cargo.toml
@@ -15,6 +15,8 @@ ahash.workspace = true
 tracing.workspace = true
 lockfree.workspace = true
 crossbeam.workspace = true
+tokio.workspace = true
+futures.workspace = true
 
 [dependencies.serde]
 workspace = true
