--- a/crates/dns-cluster/Cargo.toml
+++ b/crates/dns-cluster/Cargo.toml
@@ -18,6 +18,7 @@ thiserror.workspace = true
 tracing.workspace = true
 ahash.workspace = true
 blake3.workspace = true
+futures = "0.3"
 
 [features]
 default = []
