--- a/crates/dns-api/Cargo.toml
+++ b/crates/dns-api/Cargo.toml
@@ -11,12 +11,37 @@ description = "REST API server for DNS management"
 [dependencies]
 dns-core = { path = "../dns-core" }
 dns-storage = { path = "../dns-storage" }
+dns-cluster = { path = "../dns-cluster" }
+dns-security = { path = "../dns-security" }
 tokio.workspace = true
 hyper.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
 prometheus.workspace = true
+futures.workspace = true
+bytes.workspace = true
+anyhow.workspace = true
+ahash.workspace = true
+
+# Additional API dependencies
+axum = "0.7"
+tower = "0.5"
+tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
+jsonwebtoken = "9.3"
+uuid = { version = "1.11", features = ["v4", "serde"] }
+chrono = { version = "0.4", features = ["serde"] }
+utoipa = { version = "5.2", features = ["axum_extras", "chrono", "uuid"] }
+utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
+validator = { version = "0.19", features = ["derive"] }
+bcrypt = "0.16"
+serde_json = "1.0"
+axum-extra = { version = "0.9", features = ["typed-header"] }
+
+[dev-dependencies]
+axum-test = "16.2"
+tracing-subscriber = "0.3"
+reqwest = { version = "0.12", features = ["json"] }
 
 [features]
 default = []
