--- a/crates/dns-core/Cargo.toml
+++ b/crates/dns-core/Cargo.toml
@@ -17,6 +17,7 @@ lockfree.workspace = true
 crossbeam.workspace = true
 tokio.workspace = true
 futures.workspace = true
+reqwest = { version = "0.12", features = ["json"] }
 
 [dependencies.serde]
 workspace = true
