--- a/crates/dns-protocol/Cargo.toml
+++ b/crates/dns-protocol/Cargo.toml
@@ -17,24 +17,22 @@ thiserror.workspace = true
 tracing.workspace = true
 serde.workspace = true
 bincode = "1.3"
+async-trait = "0.1"
+socket2 = "0.5"
+base64 = { version = "0.22", optional = true }
+
+# Optional dependencies for different protocols
+hyper = { workspace = true, optional = true }
+rustls = { workspace = true, optional = true }
+tokio-rustls = { version = "0.24", optional = true }
+rustls-pemfile = { version = "1.0", optional = true }
+quinn = { workspace = true, optional = true }
 
 [build-dependencies]
 flatbuffers = "25.2"
 
 [features]
 default = []
-doh = ["hyper"]
-dot = ["rustls"]
-doq = ["quinn"]
-
-[dependencies.hyper]
-workspace = true
-optional = true
-
-[dependencies.rustls]
-workspace = true
-optional = true
-
-[dependencies.quinn]
-workspace = true
-optional = true
+doh = ["hyper", "base64"]
+dot = ["rustls", "tokio-rustls", "rustls-pemfile"]
+doq = ["quinn", "rustls", "rustls-pemfile"]
