--- a/crates/dns-storage/Cargo.toml
+++ b/crates/dns-storage/Cargo.toml
@@ -20,6 +20,7 @@ tracing.workspace = true
 ahash.workspace = true
 serde = { workspace = true, features = ["derive"] }
 bincode.workspace = true
+futures = "0.3"
 
 [features]
 default = []
